--- a/src/views/Auth/styles_auth.css
+++ b/src/views/Auth/styles_auth.css
@@ -13,7 +13,7 @@
 }
 
 .signup-container .logo {
-  max-width: 100px; /* Ajusta el tamaño del logo según tus necesidades */
+  max-width: 100px;
   margin-bottom: 20px;
 }
 
