--- a/src/components/Navbar_file/Navbar.css
+++ b/src/components/Navbar_file/Navbar.css
@@ -1,21 +1,20 @@
-/* Navbar.css */
 nav {
-  position: fixed; /* Esto hará que el navbar esté fijo en la parte superior */
-  top: 0; /* Alineado al borde superior */
-  left: 0; /* Alineado al borde izquierdo */
-  width: 100%; /* Ocupará toda la anchura de la pantalla */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem 1rem 3rem;
-  background: white; /* O el color que prefieras */
+  background: white;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 10; /* Esto asegura que el navbar se mantenga sobre otros elementos */
+  z-index: 10;
 }
 
 .logo {
   font-size: 1.5rem;
-  color: black; /* Adjust the color to match the branding */
+  color: black;
 }
 
 ul {
@@ -27,7 +26,7 @@ ul {
 
 ul li a {
   text-decoration: none;
-  color: black; /* Adjust the color to match the reference image */
+  color: black;
   transition: color 0.3s;
   font-size: 16px;
 }
